@@ -13,7 +13,7 @@ mchange-commons-java.dist.dir=lib
 # is intended to be built are shown below. usually you should leave 
 # these alone.
 #
-mchange-commons-java.version=0.2.3.3
+mchange-commons-java.version=0.2.4
 mchange-commons-java.jar.file.name=mchange-commons-java-${mchange-commons-java.version}.jar
 mchange-commons-java.jar.file=${mchange-commons-java.dist.dir}/${mchange-commons-java.jar.file.name}
 mchange-commons-java.sources.jar.file=${mchange-commons-java.dist.dir}/mchange-commons-java-${mchange-commons-java.version}-sources.jar
@@ -27,13 +27,6 @@ mchange-commons-java.sources.jar.file=${mchange-commons-java.dist.dir}/mchange-c
 
 #j2ee.classpath=
 #j2ee.jar.base.dir=
-
-
-
-
-# set these properties if you are going for jdk1.4 compatability
-#no-mgmt=set
-#jvm.target.version=1.4
 
 # otherwise
 jvm.target.version=1.5
