@@ -256,4 +256,15 @@ public final class DriverManagerDataSource extends DriverManagerDataSourceBase i
             throw new IOException("Unsupported Serialized Version: " + version);
         }
     }
+
+    // JDBC4 Wrapper stuff
+    public boolean isWrapperFor(Class<?> iface) throws SQLException
+    {
+	return false;
+    }
+
+    public <T> T unwrap(Class<T> iface) throws SQLException
+    {
+	throw new SQLException(this + " is not a Wrapper for " + iface.getName());
+    }
 }
